# VMR

./: .gitmodules  LICENSE  README.md
.github/: CODEOWNERS  pull_request_template.md
bsp/2021.2_stable/bsp/: Makefile  system.mss
docker/: Dockerfile-vmr-centos77  Dockerfile-vmr-gha-ubuntu20.04  Dockerfile-vmr-ubuntu18.04  Dockerfile-vmr-ubuntu20.04  docker-compose-gha.yml  docker-compose-jenkins.yml  docker-compose.yml  setUserEnv.sh  start.sh  vmr_setup_build.sh
sdt_build/: build.sh
src/: '  cmc.patch  cscope.out  lscript.ld
src/cmc/: cmc_bootloader_message_formatter.c  cmc_bootloader_message_formatter.h  cmc_clock_throttling_mode.h  cmc_clock_throttling_phase1.c  cmc_clock_throttling_watchpoint.c  cmc_common.c  cmc_common.h  cmc_data_store.c  cmc_data_store.h  cmc_data_store_board_info.h  cmc_data_store_constants.h  cmc_data_store_sensor_classification.h  cmc_data_store_sensor_identification.h  cmc_entry_point.h  cmc_entry_point_build_profile.h  cmc_entry_point_build_profile_gpio.h  cmc_entry_point_build_profile_peripherals.h  cmc_entry_point_build_profile_protocol_bootloader.h  cmc_entry_point_build_profile_protocol_sensor.h  cmc_entry_point_build_profile_protocols.h  cmc_entry_point_build_profile_ram_controller.h  cmc_entry_point_build_profile_uart.h  cmc_feature_control.c  cmc_feature_control.h  cmc_feature_control_constants.h  cmc_feature_control_feature_list.h  cmc_feature_control_feature_set.h  cmc_firmware_version_user_supplied_version.h  cmc_firmware_version_utility.c  cmc_fsm_state_transition_fsm_identifier.h  cmc_fsm_state_transition_logger.c  cmc_hardware_platform.c  cmc_hardware_platform_services.h  cmc_host_user_proxy_action.h  cmc_host_user_proxy_remote_operation.h  cmc_host_user_proxy_state.c  cmc_host_user_proxy_thread.h  cmc_host_user_proxy_timer.c  cmc_initialization.c  cmc_initialization.h  (+126 more)
src/common/: cl_gpio.c  cl_i2c.c  cl_log.c  cl_main.c  cl_ospi_polled.c  cl_uart_rtos.c  cl_xgq.c  cl_xgq_client.c  cl_xgq_client_plat.h  cl_xgq_plat.h  cl_xgq_server.c  mgmt_xgq_cmd.h  uart_rtos.c  xgq_cmd.h  xgq_cmd_vmr.h
src/include/: cl_config.h  cl_flash.h  cl_gpio.h  cl_i2c.h  cl_io.h  cl_log.h  cl_main.h  cl_mem.h  cl_msg.h  cl_uart_rtos.h  cl_version.h  cl_xgq.h  rmgmt_main.h  rmgmt_ospi.h  rmgmt_xclbin.h  rmgmt_xfer.h  rpu_main.h  sysmon.h  sysmon_list.h  uart_rtos.h  vmr_common.h  xclbin.h  xospipsv_flash_config.h
src/rmgmt/: cl_xfer.h  rmgmt_clock.c  rmgmt_clock.h  rmgmt_common.h  rmgmt_fpt.c  rmgmt_fpt.h  rmgmt_main.c  rmgmt_ospi_intr.c  rmgmt_ospi_polled.c  rmgmt_util.h  rmgmt_xclbin.c  rmgmt_xfer.c  rmgmt_xfer.c.rej  rmgmt_xfer.h
src/rpu_main/: rpu_main.c
src/sysmon/: sysmon.c  sysmon.h  sysmon_dcg.c  sysmon_services.c
src/tests/: freertos_hello_world.c  xfpga_partialbitstream_load_example.c
src/vmc/: MX25_CMD.h  spi_flash.c  vmc_api.c  vmc_api.h  vmc_asdm.c  vmc_asdm.h  vmc_demo.c  vmc_main.c  vmc_sc_comms.c  vmc_sc_comms.h  vmc_sensors.c  vmc_sensors.h  vmc_update_sc.c  vmc_update_sc.h
vmr/Debug/: makefile  objects.mk  sources.mk
vmr/src/: CMakeLists.txt  lscript.ld
vmr/src/cmc/: cmc_bootloader_bsl_password.c  cmc_bootloader_message_parser.c  cmc_bootloader_message_parser.h  cmc_circular_buffer.c  cmc_circular_buffer.h  cmc_clock_throttling.c  cmc_clock_throttling.h  cmc_clock_throttling_mode.c  cmc_clock_throttling_phase1.h  cmc_clock_throttling_phase2.c  cmc_core_version.c  cmc_core_version.h  cmc_data_store_board_info.c  cmc_entry_point.c  cmc_entry_point_build_profile_axi_intc.h  cmc_entry_point_build_profile_clock.h  cmc_entry_point_build_profile_clock_throttling.h  cmc_entry_point_build_profile_i2c.h  cmc_entry_point_build_profile_transport_sensor.h  cmc_entry_point_build_profile_transports.h  cmc_entry_point_build_profile_uart_category.h  cmc_entry_point_interrupt_handler.c  cmc_feature_control_feature_set.c  cmc_firmware_version.c  cmc_firmware_version.h  cmc_fsm_state_transition_logger.h  cmc_hardware_platform.h  cmc_host_user_proxy_action.c  cmc_host_user_proxy_constants.h  cmc_host_user_proxy_create_event.c  cmc_host_user_proxy_event.h  cmc_host_user_proxy_local_action.c  cmc_host_user_proxy_local_operation.h  cmc_host_user_proxy_register_set.c  cmc_host_user_proxy_state.h  cmc_host_user_proxy_thread.c  cmc_host_user_proxy_thread_schedule.c  cmc_initialization_constants.h  cmc_initialize_broker.c  cmc_initialize_libraries.c  (+113 more)
vmr/src/common/: CMakeLists.txt  cl_i2c.c  cl_log.c  cl_main.c  cl_mem.c  cl_ospi_polled.c  cl_rmi.c  cl_uart_rtos.c  cl_vmc_sc_comms.c  cl_vmc_sensor.c  (+12 more)
vmr/src/vmc/: CMakeLists.txt  clock_throttling.c  clock_throttling.h  rmi.c  rmi.h  vmc_api.c  vmc_api.h  vmc_asdm.c  vmc_asdm.h  vmc_demo.c  vmc_main.c  vmc_main.h  vmc_sc_comms.c  vmc_sc_comms.h  vmc_sensors.c  vmc_sensors.h  vmc_update_sc.c  vmc_update_sc.h
vmr/src/vmc/sensors/: CMakeLists.txt
vmr/src/vmc/sensors/inc/: CMakeLists.txt  cat34ts02.h  ina3221.h  isl68221.h  lm75.h  m24c128.h  max6639.h  qsfp.h  se98a.h  tca6416a.h
vmr/src/vmc/sensors/src/: CMakeLists.txt  cat34ts02.c  ina3221.c  isl68221.c  lm75.c  m24c128.c  max6639.c  qsfp.c  se98a.c  tca6416a.c
vmr/src/vmc/ut/: CMakeLists.txt  Makefile
vmr/src/vmc/ut/mocks/common/: cl_io.h  utm_cl_i2c.c  utm_cl_io.c  utm_cl_logs.c  utm_cl_mem.c
vmr/src/vmc/ut/mocks/freertos/: utm_heap_4.c  utm_queue.c  utm_xil_cache.c  utm_xsysmonpsv.c
vmr/src/vmc/ut/mocks/vmc/: utm_clock_throttling.c  utm_v80.c  utm_vmc_api.c  utm_vmc_asdm.c  utm_vmc_main.c  utm_vmc_main_v80.c  utm_vmc_sc_comms.c  utm_vmc_sensor.c  utm_vmc_update_sc.c
vmr/src/vmc/ut/mocks/vmc/sensors/src/: utm_cat34ts02.c  utm_ina3221.c  utm_isl68221.c  utm_lm75.c  utm_qsfp.c  utm_tca6416a.c
vmr/src/vmc/ut/test/vmc/: CMakeLists.txt  utt_assert_SDRs.c  utt_assert_SDRs.h  utt_v80.c  utt_vmc_asdm.c  utt_vmc_asdm_v80.c
vmr/src/vmc/ut/test/vmc/asdm/: unittest.mk  utt_assert_SDRs.c  utt_vmc_asdm.c
vmr/src/vmc/ut/test/vmc/sensor/se98a/: unittest.mk  utt_se98a.c
vmr/src/vmc/ut/test/vmc/sensors/: utt_cat34ts02.c  utt_ina3221.c  utt_isl68221.c  utt_lm75.c  utt_m24c128.c  utt_max6639.c  utt_qsfp.c  utt_se98a.c  utt_tca6416a.c
(+160 files in other folders)
